<resources>
    <string name="app_name">JournalApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Journal App</string>
    <string name="nav_header_subtitle">username@domain.com</string>
    <string name="nav_header_desc">Profile header</string>
    <string name="action_about">About</string>
    <string name="journal_content">Journal Content</string>
    <string name="feelings">Feelings</string>
    <string name="thoughts">Thoughts</string>
    <string name="add_journal">Add Journal</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="updated">Updated</string>
    <string name="added">Added</string>
    <string name="journal_type">journal type</string>
    <string name="journals_list_title">%s Journals</string>
    <string name="journal">Journal</string>
    <string name="action_exit_journal">Exit Journal</string>
    <string name="edited_time_format">Edited %s</string>
    <string name="created_time_format">Created %s</string>
    <string name="my_thoughts">My thoughts</string>
    <string name="my_feelings">My feelings</string>
    <string name="about_app_title">About</string>
    <string name="about_app_description">This App used to save Journals is project for my ALCwithGoogle3.0 Scholarship. Magnus Lator</string>
    <string name="dismiss">Dismiss</string>
    <string name="journal_title">Journal Title</string>
    <string name="what_describes_your_journal">What describes your journal?</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_new_journal">New Journal</string>
    <string name="action_logout">Logout</string>
    <string name="action_no">No</string>
    <string name="action_yes">Yes</string>
    <string name="msg_delete_confirm">Are you sure you want this deleted?</string>
    <string name="title_delete_confirm">Confirm Delete</string>
    <string name="msg_journal_deleted">Journal deleted</string>
    <string name="msg_cannot_connect">Can not connect at the moment</string>
    <string name="msg_no_network_available">Network unavailable, Check connection and try again</string>
    <string name="action_retry">Retry</string>
</resources>
