<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_5"
            android:textColorHint="@color/color_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:focusable="true"
                android:hint="@string/journal_title"
                android:inputType="text"
                android:textColorHint="@color/color_gray"
                tools:targetApi="lollipop" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_5"
            android:textColorHint="@color/color_gray"
            app:layout_constraintBottom_toTopOf="@+id/radio_group_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <EditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/journal_content"
                android:inputType="textMultiLine"
                android:textColorHint="@color/color_gray"
                tools:targetApi="lollipop" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corners_5"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_type_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_describes_your_journal" />

            <RadioButton
                android:id="@+id/radio_thought"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:padding="5dp"
                android:text="@string/thoughts" />

            <RadioButton
                android:id="@+id/radio_feelings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:padding="5dp"
                android:text="@string/feelings" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>
</layout>